about tweaking so that image is close to top

--- a/about.html
+++ b/about.html
@@ -82,8 +82,7 @@
         </div>
 
         <div class="text-break"></div>
-
-        <div class="secondary-text">
+                <div class="secondary-text">
           <a href="mailto: lewisdion26@gmail.com" target="_blank">Email↗</a
           >&nbsp;&nbsp;
           <a
@@ -97,6 +96,12 @@
             >Resume↗</a
           >&nbsp;&nbsp;
         </div>
+                <div class="smallbr"></div>
+
+        <div class="image-gallery">
+          <img class="project" src="images/lewis-dion_profile-pic.JPG" />
+        </div>
+
         <div class="smallbr"></div>
         <hr />
         <div class="smallbr"></div>
@@ -183,14 +188,11 @@
         <hr />
         <div class="smallbr"></div>
 
-        <h1>More about me :^)</h1>
+
+
+        <h1>More about me</h1>
+
         <div class="text-break"></div>
-
-        <div class="image-gallery">
-          <img class="project" src="images/lewis-dion_profile-pic.JPG" />
-        </div>
-
-        <div class="smallbr"></div>
         <div class="secondary-text">
           <p>
             Personally I'm a big
@@ -225,35 +227,23 @@
             >, and a long-winded, overly theatrical character.
           </p>
         </div>
-      </div>
-
-      <div class="text-break"></div>
-      <div class="text-break"></div>
-      <!-- Intro video -->
-      <video
-        class="full"
-        width="100%"
-        loop
-        autoplay
-        controls
-        muted
-        style="margin-left: auto; margin-right: auto"
-      >
-        <source
-          src="../../images/about/open-world_b_01032025_min.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <div class="text-break"></div>
-      <div class="text-break"></div>
-
-      <div class="welcome-container">
-        <div class="welcome-box1">
-          <div class="center-text"></div>
-        </div>
-
-        <div class="welcome-box2">
-          <iframe
+        <div class="smallbr"></div>
+        <video
+            class="full"
+            width="100%"
+            loop
+            autoplay
+            controls
+            muted
+            style="margin-left: auto; margin-right: auto"
+        >
+            <source
+            src="../../images/about/open-world_b_01032025_min.mp4"
+            type="video/mp4"
+            />
+        </video>
+        <div class="smallbr"></div>
+        <iframe
             class="youtube-video"
             src="https://www.youtube.com/embed/CC-CffIolk0?si=79YNfsw4OzlrwhJW&loop=1&playlist=CC-CffIolk0"
             title="YouTube video player"
@@ -263,10 +253,10 @@
             allowfullscreen
           >
           </iframe>
-        </div>
+                <div class="smallbr"></div>
       </div>
-      <div class="text-break"></div>
-      <div class="text-break"></div>
+
+
 
       <div class="image-gallery">
         <img class="project" src="images/about/2025classPhoto-min.jpg" />
