updated about fully with lorenzo, miyamoto, and descriptions

--- a/about.html
+++ b/about.html
@@ -75,9 +75,9 @@
         <h1>About me</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
-          I design digital tools and experiences with the hopes of informing and
+          I design digital products and infrastructure in hopes of informing and
           connecting people. I recently graduated from Carnegie Mellon
-          University (Spring 2025) with a Bachelors in Design and a minor in
+          University (Spring 2025) with a Bachelor's in Design and a minor in
           Social and Political History.
         </div>
 
@@ -242,6 +242,14 @@
             type="video/mp4"
             />
         </video>
+        <div class="text-break"></div>
+        <div class="project-descriptions">
+          <div class="secondary-text">
+           A personal story told in pixels.
+          </div>
+        </div>
+
+
         <div class="smallbr"></div>
         <iframe
             class="youtube-video"
@@ -253,17 +261,77 @@
             allowfullscreen
           >
           </iframe>
-                <div class="smallbr"></div>
+          <div class="text-break"></div>
+           <div class="project-descriptions">
+            <div class="secondary-text">
+            My mom's pulao / pilaf recipe, in motion.
+            </div>
+          </div>
+
+          <div class="smallbr"></div>
+          <div class="image-gallery">
+                    <img class="project" src="images/about/lorenzo-1.jpg" />
+          </div>
+                    <div class="text-break"></div>
+          <div class="image-gallery">
+                    <img class="project" src="images/about/lorenzo-2.JPG" />
+          </div>
+                    <div class="text-break"></div>
+                              <div class="image-gallery">
+                    <img class="project" src="images/about/lorenzo-3.JPG" />
+          </div>
+                    <div class="text-break"></div>
+
+
+                        <div class="project-descriptions">
+            <div class="secondary-text">
+            A small typographic graffiti event I organized, featuring a stencil typeface I designed.
+            </div>
+          </div>
+                  <div class="smallbr"></div>
+
+            <video
+              class="border"
+              width="100%"
+              loop
+              autoplay
+              controls
+              muted
+              style="margin-left: auto; margin-right: auto"
+            >
+            <source
+            src="../../images/about/miyamoto_animation.mp4"
+            type="video/mp4"
+            />
+        </video>
+           <div class="text-break"></div>
+
+
+                        <div class="project-descriptions">
+            <div class="secondary-text">
+            Animated tribute to Shigeru Miyamoto, my design hero.
+            </div>
+          </div>
+
       </div>
+        <div class="bigbr"></div>
 
 
 
       <div class="image-gallery">
         <img class="project" src="images/about/2025classPhoto-min.jpg" />
       </div>
-    </main>
-    <div class="bigbr"></div>
 
+               <div class="text-break"></div>
+    <div class="core">
+      <div class="project-descriptions">
+        <div class="secondary-text">
+          CMU Design's class of 2025. I'm on the far left. 
+        </div>
+      </div>
+    </div>
+    <div class="bigbr"></div>
+    </main>
     <footer>
       <div class="secondary-text">
         <div class="project-descriptions">
