updating index intro copy with a0

--- a/index.html
+++ b/index.html
@@ -103,16 +103,17 @@
         <h1>
           Hello there, I'm Dion Lewis!<br />
 
-          I design accessible digital products.
+          I design accessible digital experiences.
         </h1>
         <div class="text-break"></div>
         <div class="text-break"></div>
 
         <div class="secondary-text">
-          Previously, Digital Design & Development Intern @
+          Currently, Design Consultant @ <a href="https://a0.dev/" target="_blank">a0.dev</a>.
+          <br> Previously, Digital Design & Development Intern @
           <a href="https://www.sfchronicle.com/" target="_blank"
             >San Francisco Chronicle↗</a
-          >. Currently freelancing out of Toronto. Open for full-time
+          >. <br> Open for freelance and full-time
           opportunities.
 
           <div class="text-break"></div>
