--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -15,7 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Epilogue&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="../../images/favicon.svg">
    </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XWJLCTCXFF"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-XWJLCTCXFF');
+    </script>
     <body>
         <header>
             <nav class="nav-outer">
