--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       crossorigin
     />
   </head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XWJLCTCXFF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XWJLCTCXFF');
+  </script>
 
   <body>
     <header>
