updated job descirptions, titles, chornicle project positioning on index

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
       <div class="bigbr"></div>
 
       <div class="core" id="core">
-        <h1>About me</h1>
+        <h1>☺ About me</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
           I design digital products and infrastructure in hopes of informing and
@@ -106,31 +106,37 @@
         <hr />
         <div class="smallbr"></div>
 
-        <h1>Experience</h1>
+        <h1>♨ Experience</h1>
 
         <div class="smallbr"></div>
-        Designer, Freelance
+        Freelance Product Designer, a0.dev
         <div class="text-break"></div>
         <h4 style="color:#757575">September 2025—Present</h4>
                 <div class="text-break"></div>
         <div class="secondary-text">
-        Designing digital experiences for startups and non-profits.
+        Redesigning the a0.dev landing page to better communicate product offerings and drive conversion. Collaborating with founders and the lead designer to align visual design, UX, and growth strategy.
+        </div>
+
+         <div class="smallbr"></div>
+        Freelance Product Designer, BestSummerPrograms
+        <div class="text-break"></div>
+        <h4 style="color:#757575">September 2025—Present</h4>
+                <div class="text-break"></div>
+        <div class="secondary-text">
+        Designing core UI components and informational elements to improve platform clarity and consistency. Refining the visual system and defining UX flows for new features like program comparison and sharing.
         </div>
 
         <div class="smallbr"></div>
-        Digital Design Intern, San Francisco Chronicle
+        Product Design Intern, San Francisco Chronicle
         <div class="text-break"></div>
         <h4 style="color:#757575">June—September 2025</h4>
                 <div class="text-break"></div>
         <div class="secondary-text">
-        Lead 0→1 design and direction for an emerging reader-facing digital
-        product now in development. Designed and built digital
-        experiences using Figma and React.js, in collaboration with reporters, art
-        directors, editors, photographers, and engineers.
+        Lead 0 to 1 design and direction for an emerging reader-facing digital product now in development. Designed and developed a responsive storytelling experience in Figma and React.js, collaborating with designers, reporters, art directors, and engineers.
         </div>
 
         <div class="smallbr"></div>
-        Technical Design Intern, SGK
+        Design Intern, SGK
         <div class="text-break"></div>
         <h4 style="color:#757575">May—August 2024</h4>
                 <div class="text-break"></div>
@@ -190,7 +196,7 @@
 
 
 
-        <h1>More about me</h1>
+        <h1>☁ More about me</h1>
 
         <div class="text-break"></div>
         <div class="secondary-text">
@@ -326,7 +332,7 @@
     <div class="core">
       <div class="project-descriptions">
         <div class="secondary-text">
-          CMU Design's class of 2025. I'm on the far left. 
+          CMU Design 2025 :^) 
         </div>
       </div>
     </div>
