--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
         <h1>
           Hello there, I'm Dion Lewis!<br />
 
-          I design accessible digital experiences.
+          I design accessible digital experiences :^)
         </h1>
         <div class="text-break"></div>
         <div class="text-break"></div>
 
         <div class="secondary-text">
-          Currently, Design Consultant @ <a href="https://a0.dev/" target="_blank">a0.dev</a>.
-          <br> Previously, Digital Design & Development Intern @
+          Currently, Freelance Product Designer  @ <a href="https://a0.dev/" target="_blank">a0.dev</a>.
+          <br> Previously, Product Design Intern @
           <a href="https://www.sfchronicle.com/" target="_blank"
             >San Francisco Chronicle↗</a
           >. <br> Open for freelance and full-time
@@ -162,8 +162,61 @@
                     <h4>Product Design · UX Research</h4>
                     <div class="text-break"></div>
                 </a> -->
+ <a
+            href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html"
+            class="gallery-anchor"
+          >
+            <video width="100%" loop autoplay muted>
+              <source
+                src="../../images/sfchronicle/sfchronicle-thumbnail.mp4"
+                type="video/mp4"
+              />
+            </video>
+            <div class="text-break"></div>
+            <div class="text-break"></div>
+            <h1>San Francisco Chronicle 🔐</h1>
+            <div class="text-break"></div>
+            Interface design & direction for a new reader-facing digital
+            product.
+            <div class="text-break"></div>
+            <h4>Internship · Product Design · Mobile Design · Prototyping</h4>
+            <div class="text-break"></div>
+          </a>
+         
 
-          <a
+          <a href="gallery/lorebot.html" class="gallery-anchor">
+            <img
+              class="project"
+              src="images/lorebot/thumbnail-composite_with-logo-min.png"
+            />
+            <div class="text-break"></div>
+            <div class="text-break"></div>
+            <h1>Lorebot</h1>
+            <div class="text-break"></div>
+            An AI tool that lets Twitch viewers move fluidly between the
+            live-stream and past context.
+            <div class="text-break"></div>
+            <h4>Product Design · UX Research</h4>
+            <div class="text-break"></div>
+          </a>
+
+          <a href="gallery/spoken.html" class="gallery-anchor">
+            <img class="project" src="images/spoken/spoken_thumbnail.png" />
+            <div class="text-break"></div>
+            <div class="text-break"></div>
+            <h1>Sijaan Am</h1>
+            <div class="text-break"></div>
+            Illustration and animation to spark interest in an endangered
+            Eurasian language.
+            <div class="text-break"></div>
+            <h4>Illustration · Motion Design</h4>
+            <div class="text-break"></div>
+          </a>
+        </div>
+
+        <div class="project-box2">
+         
+ <a
             href="https://ysiuz.github.io/20250224_force-directed_exp/"
             target="_blank"
             class="gallery-anchor"
@@ -198,59 +251,6 @@
 
             <div class="text-break"></div>
           </a>
-
-          <a href="gallery/lorebot.html" class="gallery-anchor">
-            <img
-              class="project"
-              src="images/lorebot/thumbnail-composite_with-logo-min.png"
-            />
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Lorebot</h1>
-            <div class="text-break"></div>
-            An AI tool that lets Twitch viewers move fluidly between the
-            live-stream and past context.
-            <div class="text-break"></div>
-            <h4>Product Design · UX Research</h4>
-            <div class="text-break"></div>
-          </a>
-
-          <a href="gallery/spoken.html" class="gallery-anchor">
-            <img class="project" src="images/spoken/spoken_thumbnail.png" />
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Sijaan Am</h1>
-            <div class="text-break"></div>
-            Illustration and animation to spark interest in an endangered
-            Eurasian language.
-            <div class="text-break"></div>
-            <h4>Illustration · Motion Design</h4>
-            <div class="text-break"></div>
-          </a>
-        </div>
-
-        <div class="project-box2">
-          <a
-            href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html"
-            class="gallery-anchor"
-          >
-            <video width="100%" loop autoplay muted>
-              <source
-                src="../../images/sfchronicle/sfchronicle-thumbnail.mp4"
-                type="video/mp4"
-              />
-            </video>
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>San Francisco Chronicle 🔐</h1>
-            <div class="text-break"></div>
-            Interface design & direction for a new reader-facing digital
-            product.
-            <div class="text-break"></div>
-            <h4>Product Design · Stakeholder Research · Prototyping</h4>
-            <div class="text-break"></div>
-          </a>
-
           <a href="gallery/inuit.html" class="gallery-anchor">
             <video width="100%" loop autoplay muted>
               <source
