overhauled nav across index, about, lorebot. redid intro on index

--- a/about.html
+++ b/about.html
@@ -20,44 +20,23 @@
   </head>
 
   <body>
-    <header>
+           <header>
       <nav class="nav-outer">
         <div class="nav-inner">
           <div class="nav-buttons">
+            <div class="name">
+              <a href="index.html">
+                <h5 style="color: #37abff">Dion Lewis</h5>
+              </a>
+            </div>
             <div class="special-buttons">
               <a href="index.html" class="nav-button">
                 <h5>☁</h5>
-                &nbsp;
-                <body>
-                  Work
-                </body>
+                &nbsp; Work
               </a>
               <a href="about.html" class="nav-button active">
                 <h5>☺</h5>
-                &nbsp;<button>About</button>
-              </a>
-            </div>
-            <div class="project-buttons">
-              <!-- Projects:  -->
-              <a
-                href="https://ysiuz.github.io/20250224_force-directed_exp/"
-                target="_blank"
-              >
-                Atlas
-              </a>
-              <a href="https://diondesigns.me/gallery/lorebot.html">
-                Lorebot
-              </a>
-              <a href="https://diondesigns.me/gallery/inuit.html">
-                Life & Death
-              </a>
-
-              <a href="https://diondesigns.me/gallery/stone.html">
-                Bom Jesus
-              </a>
-
-              <a href="https://diondesigns.me/gallery/spoken.html">
-                Sijaan Am
+                &nbsp;About
               </a>
             </div>
           </div>
@@ -72,28 +51,28 @@
       <div class="bigbr"></div>
 
       <div class="core" id="core">
-        <h1>☺ About me</h1>
+        <h1>☺ More about me</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
-          I design digital products and infrastructure in hopes of informing and
-          connecting people. I recently graduated from Carnegie Mellon
+          Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I believe at it's best, digital infrastructure can help us explore, learn, connect, and feel deeply.    
+ I recently graduated from Carnegie Mellon
           University (Spring 2025) with a Bachelor's in Design and a minor in
           Social and Political History.
         </div>
-
+        <div class="text-break"></div>
         <div class="text-break"></div>
                 <div class="secondary-text">
-          <a href="mailto: lewisdion26@gmail.com" target="_blank">Email↗</a
+          <a href="mailto: lewisdion26@gmail.com" target="_blank">Email</a
           >&nbsp;&nbsp;
           <a
             href="https://www.linkedin.com/in/dion-lewis-1117b21b5/"
             target="_blank"
-            >LinkedIn↗</a
+            >LinkedIn</a
           >&nbsp;&nbsp;
           <a
             href="https://drive.google.com/file/d/14EZcBQ3tWuHF3i5kp9bQOhyDJgHgwacX/view?usp=sharing"
             target="_blank"
-            >Resume↗</a
+            >Resume</a
           >&nbsp;&nbsp;
         </div>
                 <div class="smallbr"></div>
@@ -196,7 +175,7 @@
 
 
 
-        <h1>☁ More about me</h1>
+        <h1>☁ Even more about me</h1>
 
         <div class="text-break"></div>
         <div class="secondary-text">
