--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -17,44 +17,29 @@
    </head>
 
     <body>
-        <header>
-            <nav class="nav-outer">
-                <div class="nav-inner">
-                    <div class="nav-buttons">
-                        <div class="special-buttons">
-                            <a href="../index.html" class="nav-button">
-                                <h5>☁</h5>&nbsp;Work
-                            </a>
-                            <a href="../about.html" class="nav-button">
-                                <h5>☺</h5>&nbsp; About
-                            </a>
-                        </div>
-                        <div class="project-buttons">
-
-                            <!-- Projects:  -->
-                            <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
-                                Atlas
-                            </a>
-                            <a href="https://diondesigns.me/gallery/lorebot.html" class="active">
-                               Lorebot
-                            </a>
-                            <a href="https://diondesigns.me/gallery/inuit.html">
-                                Life & Death
-                             </a>
-
-                             <a href="https://diondesigns.me/gallery/stone.html">
-                                Bom Jesus
-                             </a>
-
-                             <a href="https://diondesigns.me/gallery/spoken.html">
-                                Sijaan Am
-                             </a>
-                        </div>      
-                    </div>
-                </div>
-            </nav>
-            
-        </header>
+       <header>
+      <nav class="nav-outer">
+        <div class="nav-inner">
+          <div class="nav-buttons">
+            <div class="name">
+              <a href="../index.html">
+                <h5 style="color: #37abff">Dion Lewis</h5>
+              </a>
+            </div>
+            <div class="special-buttons">
+              <a href="../index.html" class="nav-button">
+                <h5>☁</h5>
+                &nbsp; Work
+              </a>
+              <a href="../about.html" class="nav-button">
+                <h5>☺</h5>
+                &nbsp;About
+              </a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
 
         <!-- Fixed Navigation Panel -->
         <div class="fixed-nav-panel">
