updated gallery typography

--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
           <!-- Currently I'm a freelance product designer at <a href="https://a0.dev" target="_blank">a0.dev</a>. -->
         </div>
         <div class="text-break"></div>
-
         <div class="text-break"></div>
                 <div class="secondary-text">
           <a href="mailto: lewisdion26@gmail.com" target="_blank">Email</a
@@ -146,15 +145,13 @@
                 type="video/mp4"
               />
             </video>
+            <!-- <div class="text-break"></div>
+            <h1>San Francisco Chronicle 🔐</h1> -->
             <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>San Francisco Chronicle 🔐</h1>
-            <div class="text-break"></div>
-            Interface design & direction for a new reader-facing digital
-            product.
-            <div class="text-break"></div>
-            <h4>Internship · Product Design · Mobile Design · Prototyping</h4>
-            <div class="text-break"></div>
+            <p style=" color: #363636;">San Francisco Chronicle</p>
+
+            <p>Digital news platform</p>
+            <!-- <h4>Internship · Product Design · Mobile Design · Prototyping</h4> -->
           </a>
 
           <a href="gallery/lorebot.html" class="gallery-anchor">
@@ -163,27 +160,17 @@
               src="images/lorebot/thumbnail-composite_with-logo-min.png"
             />
             <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Lorebot</h1>
-            <div class="text-break"></div>
-            An AI tool that lets Twitch viewers move fluidly between the
-            live-stream and past context.
-            <div class="text-break"></div>
-            <h4>Product Design · UX Research</h4>
-            <div class="text-break"></div>
+            <p style=" color: #363636;">Lorebot</p>
+
+            <p>Live-stream AI tool</p>
           </a>
 
           <a href="gallery/spoken.html" class="gallery-anchor">
             <img class="project" src="images/spoken/spoken_thumbnail.png" />
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Sijaan Am</h1>
-            <div class="text-break"></div>
-            Illustration and animation to spark interest in an endangered
-            Eurasian language.
-            <div class="text-break"></div>
-            <h4>Illustration · Motion Design</h4>
-            <div class="text-break"></div>
+              <div class="text-break"></div>
+            <p style=" color: #363636;">Sijaan Am</p>
+
+            <p>Language animation</p>
           </a>
         </div>
 
@@ -212,16 +199,10 @@
               </div>
             </div>
 
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Atlas</h1>
-            <div class="text-break"></div>
-            An interactive web platform that visualizes user's social media
-            consumption habits and connections.
-            <div class="text-break"></div>
-            <h4>Data Visualization · Interaction Design · Code · ML</h4>
+                <div class="text-break"></div>
+            <p style=" color: #363636;">Atlas</p>
 
-            <div class="text-break"></div>
+            <p>Social data interface</p>
           </a>
           <a href="gallery/inuit.html" class="gallery-anchor">
             <video width="100%" loop autoplay muted>
@@ -230,28 +211,18 @@
                 type="video/mp4"
               />
             </video>
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Life & Death: TB in Inuit Communities</h1>
-            <div class="text-break"></div>
-            A digital editorial prototype tracing Inuit Canadians’ fight against
-            tuberculosis over time.
-            <div class="text-break"></div>
-            <h4>Editorial Design · Data Visualization</h4>
-            <div class="text-break"></div>
+                <div class="text-break"></div>
+            <p style=" color: #363636;">Life & Death: TB in Inuit Communities</p>
+
+            <p>Editorial Design</p>
           </a>
 
           <a href="gallery/stone.html" class="gallery-anchor">
             <img class="project" src="images/stone/photography/IMG_2934.JPG" />
-            <div class="text-break"></div>
-            <div class="text-break"></div>
-            <h1>Basilica of Bom Jesus</h1>
-            <div class="text-break"></div>
-            A print publication & web prototype that maps the stories behind a
-            beloved heritage site in Goa, India.
-            <div class="text-break"></div>
-            <h4>Editorial Design · Print Design · Historical Research</h4>
-            <div class="text-break"></div>
+                <div class="text-break"></div>
+            <p style=" color: #363636;">Basilica of Bom Jesus</p>
+
+            <p>Editorial Design</p>
           </a>
         </div>
       </div>
