--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -23,7 +23,7 @@
           <div class="nav-buttons">
             <div class="name">
               <a href="../index.html">
-                <h5 style="color: #37abff">Dion Lewis</h5>
+                <h5>Dion Lewis</h5>
               </a>
             </div>
             <div class="special-buttons">
