slight about page changes

--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
       <div class="bigbr"></div>
 
       <div class="core" id="core">
-        <h1>☺ More about me</h1>
+        <h1>☺ About me</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
-          Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I believe at it's best, digital infrastructure can help us explore, learn, connect, and feel deeply.    
+          Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I believe at it's best, digital infrastructure can help us explore, learn, connect, and feel deeply. 
  I recently graduated from Carnegie Mellon
           University (Spring 2025) with a Bachelor's in Design and a minor in
           Social and Political History.
@@ -175,7 +175,7 @@
 
 
 
-        <h1>☁ Even more about me</h1>
+        <h1>☁ More about me</h1>
 
         <div class="text-break"></div>
         <div class="secondary-text">
