--- a/index.html
+++ b/index.html
@@ -203,6 +203,16 @@
 
             <p>Social data interface</p>
           </a>
+          <!-- <a href="gallery/a0.html" class="gallery-anchor">
+            <img
+              class="project"
+              src="images/a0/logo-thumbnail.png"
+            />
+            <div class="text-break"></div>
+            <p style=" color: #363636;">a0.dev</p>
+
+            <p>Landing page</p>
+          </a> -->
           <a href="gallery/inuit.html" class="gallery-anchor">
             <video width="100%" loop autoplay muted>
               <source
