about copy edit

--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@
         <h1>☺ About me</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
-          Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I believe at it's best, digital infrastructure can help us explore, learn, connect, and feel deeply. 
- I recently graduated from Carnegie Mellon
+          Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I recently graduated from Carnegie Mellon
           University (Spring 2025) with a Bachelor's in Design and a minor in
-          Social and Political History.
+          Social and Political History. I believe at it's best, digital infrastructure can help us explore, learn, connect, and feel deeply.
+
         </div>
         <div class="text-break"></div>
         <div class="text-break"></div>
