ammending copy on about

--- a/about.html
+++ b/about.html
@@ -56,8 +56,9 @@
         <div class="secondary-text">
           Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I recently graduated from Carnegie Mellon
           University (Spring 2025) with a Bachelor's in Design and a minor in
-          Social and Political History. I believe at it's best, digital infrastructure can help us explore, learn, connect, and feel deeply.
-
+          Social and Political History. 
+          
+I believe at it's best, digital infrastructure can help us explore widely, learn freely, draw closer to one another, and feel deeply.
         </div>
         <div class="text-break"></div>
         <div class="text-break"></div>
