--- a/index.html
+++ b/index.html
@@ -85,20 +85,25 @@
     <!-- START OF GALLERY -->
     <div class="bigbr"></div>
     <div class="bigbr"></div>
-<main>
- <div class="core" id="core">
+    <main>
+      <div class="core" id="core">
         <h1>✌ Hello there!</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
-          I'm a digital product designer passionate about building accessible experiences that inform, empower, and connect people. Open to freelance and full-time opportunities. 
-                  <div class="text-break"></div>
-          Currently, Freelance Product Designer @ <a href="https://a0.dev" target="_blank">a0.dev</a>. <br>
-          Previously, Product Design Intern @ <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle</a>.
-          
+          I'm a digital product designer passionate about building accessible
+          experiences that inform, empower, and connect people. Open to
+          freelance and full-time opportunities.
+          <div class="text-break"></div>
+          Currently, Freelance Product Designer @
+          <a href="https://a0.dev" target="_blank">a0.dev</a>. <br />
+          Previously, Product Design Intern @
+          <a href="https://www.sfchronicle.com/" target="_blank"
+            >San Francisco Chronicle</a
+          >.
         </div>
         <div class="text-break"></div>
         <div class="text-break"></div>
-                <div class="secondary-text">
+        <div class="secondary-text">
           <a href="mailto: lewisdion26@gmail.com" target="_blank">Email</a
           >&nbsp;&nbsp;
           <a
@@ -113,13 +118,12 @@
           >&nbsp;&nbsp;
         </div>
 
-      <div class="image-gallery">
-        <img class="smol" src="images/dion.gif" />
+        <div class="image-gallery">
+          <img class="smol" src="images/dion.gif" />
+        </div>
+        <hr />
       </div>
-      <hr />
-  </div>
-</main>
-   
+    </main>
 
     <div class="index-main">
       <div class="project-container">
@@ -147,7 +151,7 @@
             <!-- <div class="text-break"></div>
             <h1>San Francisco Chronicle 🔐</h1> -->
             <div class="text-break"></div>
-            <p style=" color: #363636;">San Francisco Chronicle</p>
+            <p style="color: #363636">San Francisco Chronicle</p>
 
             <p>Digital news platform</p>
             <!-- <h4>Internship · Product Design · Mobile Design · Prototyping</h4> -->
@@ -159,15 +163,15 @@
               src="images/lorebot/thumbnail-composite_with-logo-min.png"
             />
             <div class="text-break"></div>
-            <p style=" color: #363636;">Lorebot</p>
+            <p style="color: #363636">Lorebot</p>
 
             <p>Live-stream AI tool</p>
           </a>
 
           <a href="gallery/spoken.html" class="gallery-anchor">
             <img class="project" src="images/spoken/spoken_thumbnail.png" />
-              <div class="text-break"></div>
-            <p style=" color: #363636;">Sijaan Am</p>
+            <div class="text-break"></div>
+            <p style="color: #363636">Sijaan Am</p>
 
             <p>Language animation</p>
           </a>
@@ -198,8 +202,8 @@
               </div>
             </div>
 
-                <div class="text-break"></div>
-            <p style=" color: #363636;">Atlas</p>
+            <div class="text-break"></div>
+            <p style="color: #363636">Atlas</p>
 
             <p>Social data interface</p>
           </a>
@@ -220,16 +224,16 @@
                 type="video/mp4"
               />
             </video>
-                <div class="text-break"></div>
-            <p style=" color: #363636;">Life & Death: TB in Inuit Communities</p>
+            <div class="text-break"></div>
+            <p style="color: #363636">Life & Death: TB in Inuit Communities</p>
 
             <p>Editorial Design</p>
           </a>
 
           <a href="gallery/stone.html" class="gallery-anchor">
             <img class="project" src="images/stone/photography/IMG_2934.JPG" />
-                <div class="text-break"></div>
-            <p style=" color: #363636;">Basilica of Bom Jesus</p>
+            <div class="text-break"></div>
+            <p style="color: #363636">Basilica of Bom Jesus</p>
 
             <p>Editorial Design</p>
           </a>
